fix black friday deals image stretching

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -72,6 +72,7 @@ main {
     height: 25rem;
     border-radius: 4px;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 0.2);
+    object-fit: cover;
 }
 
 .sale figcaption {
